--- a/Portfolio.html
+++ b/Portfolio.html
@@ -73,9 +73,15 @@
     </div>
 
     <div class="outil">
-        <div></div>
-        <div></div>
-        <div></div>
+        <div class="html">
+            <img src="images/base.png" alt="">
+        </div>
+        <div class="html">
+            <img src="images/spting-boot-removebg-preview.png" alt="">
+        </div>
+        <div class="html">
+            <img src="images/flutter.png" alt="">
+        </div>
         <div></div>
         <div></div>
         <div></div>
@@ -87,14 +93,15 @@
         <h1>Contactez <span class="pri">moi</span> </h1>
     </div>
 <footer>
-    <form action="">
-        <div>
-            <input type="text" name="nom" placeholder="Votre nom">
-            <input type="tel" name="tel" placeholder="Votre numéro de téléphone">
-        </div>
-        <input type="text" name="titre" placeholder="titre"><br>
-        <textarea name="message" id="message" cols="30" rows="10">Votre message</textarea>
-    </form>
+   <div class="compte">
+        <a href="mailto:mohamedfdg72@gmail.com">
+            <pre><code>&#9993;</code></pre>
+        </a>
+        <a href="tel:+22372664229">
+            <pre><code>&#9742;</code></pre>
+        </a>
+   </div>
+   <h6 style="text-align: center;">Copyright © : 2023-par Mamadou FADIGA</h6>
     
 </footer>
     
