--- a/index.html
+++ b/index.html
@@ -51,12 +51,9 @@
         <div class="main-content">
             <h4>Bonjour et bienvenue !!!</h4>
             <h1> Je suis <span>Mamadou FADIGA</span></h1>
-            <P>Développeur web et mobile passionné par le travail d'équipe, l'acquisition 
-                de nouvelles compétences et le partage de connaissances. <br> Actuel vice-président du club d'anglais <span>BIG-HOPE-MALI</span> ; je suis diplomé de l'Institut de Formation de Maître ( <span>I.F.M</span> )
-                detenteur d'une licence en informatique de gestique de gestion et 
-                fruit d'<span>Orange Digital Kalanso 3.</span><br>
-                Actuellement, je dispance les cours d'informatique au lycée, les cours de 
-                biologie et physique-chimie au niveau fondamental ( <span>Second cycle</span>).
+            <P>Passionné par le travail d'équipe, l'acquisition de nouvelles compétences et le partage de connaissances, je suis un développeur web et mobile certifié par <span>Orange Digital Center</span>. Je suis diplômé de l'Institut de Formation de Maître (I.F.M) et titulaire d'une licence en informatique de gestion. <br>
+            Actuel vice-président du club d'anglais <span>Big-Hope-Mali</span> et membre du conseil national des clubs d'anglais du Mali ( <span>MECC</span> ). <br>
+            <span>Je parle français, anglais, et Bamanakan.</span>
             </P>
             <div class="social">
                 <a href="https://www.facebook.com/mamadou.fadiga.716"><i class="ri-facebook-fill"></i></a>
@@ -65,7 +62,7 @@
                 <a href="mailto:mohamedfdg72@gmail.com"><i class="ri-mail-line"></i></a>
             </div>
             <div class="main-btn">
-                <a href="images/Fadiga.pdf" download="Cv_Fadiga.pdf" class="btn">Télécharger mon CV</a>
+                <a href="images/Fadiga_CV.pdf" download="Cv_Fadiga.pdf" class="btn">Télécharger mon CV</a>
             </div>
         </div>
     </section>
