--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
            <!-- ======================================== -->
            <div class="box">
             <img src="images/presentation-line.png" alt="IMG">
-            <h3>Ensignant</h3>
+            <h3>Enseignant</h3>
             <p>J'enseigne la biologie et la physique-chimie dans les écoles fondamentales
                 et l'informatique au lycée.
             </p>
